--- a/views/events/confirmation.ejs
+++ b/views/events/confirmation.ejs
@@ -29,18 +29,24 @@
                     <p class="text-muted">Atenção: Seus ingressos ainda não estão reservados. Confirme sua seleção para garantir seu lugar.</p>
                     
                     <div id="ticket-details">
-                        <div class="event-title">Guts World Tour - Curitiba (26/03/25)</div>
-                        <div class="ticket-info">
-                            <span><strong>1x </strong>Pista - Inteira</span>
-                            <span>R$ 900,00</span>
-                        </div>
+                        <div class="event-title"><%= event.name %> - <%= event.city %> (<%= event.date %>)</div>
+                        <% tickets.forEach(ticket => { %>
+                            <div class="ticket-info">
+                                <span><strong><%= ticket.quantity %>x </strong><%= ticket.sector %> - <%= ticket.ticketType %></span>
+                                <span>R$ <%= ticket.subtotal.toFixed(2).replace('.', ',') %></span>
+                            </div>
+                        <% }); %>
                     </div>
                     
                     <hr>
-                    <h5 class="total-container">Total: <span id="total-price">R$ 900,00</span></h5>
+                    <h5 class="total-container">Total: <span id="total-price">R$ <%= totalPrice %></span></h5>
                     
                     <div class="mt-3">
-                        <a href="confirmacao/pagamento" class="btn btn-primary">Confirmar a Reserva</a>
+                        <form method="post" action="confirmacao/pagamento">
+                            <input type="hidden" name="selectedTickets" value="<%= JSON.stringify(tickets) %>">
+                            <input type="hidden" name="totalPrice" value="<%= totalPrice %>">
+                            <button type="submit" class="btn btn-primary">Confirmar a Reserva</button>
+                        </form>
                     </div>
                 </div>
             </div>
