--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -41,7 +41,7 @@
                 <!-- Cards -->
                 <div class="cards-container">
                     <% orders.forEach(order => { %>
-                        <div class="card" onclick="redirectToPage('/')">
+                        <div class="card" onclick="redirectToPage('meus-pedidos/<%- order.link %>')">
                             <img src="<%= order.image %>" alt="order.name">
                             <h3><%= order.name %></h3>
                             <p><%= order.locale %></p>
