--- a/views/admin/create-event.ejs
+++ b/views/admin/create-event.ejs
@@ -27,7 +27,7 @@
 
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
-            <%- include('../components/event-data', { actionUrl: 'criar' , actionName: 'Criar Evento' }) %>
+            <%- include('../components/event-data', { actionUrl: 'criar' , actionName: 'Criar Evento', complete: true }) %>
         </div>
 
         <!-- Rodapé  -->
