--- a/views/admin/edit-event.ejs
+++ b/views/admin/edit-event.ejs
@@ -27,7 +27,7 @@
 
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
-            <%- include('../components/event-data', { actionUrl: 'editar' , actionName: 'Salvar Evento' }) %>
+            <%- include('../components/event-data', { actionUrl: link, actionName: 'Salvar Evento', complete: false }) %>
         </div>
 
         <!-- Rodapé  -->
