--- a/views/components/event-data.ejs
+++ b/views/components/event-data.ejs
@@ -12,11 +12,23 @@
         <input type="text" class="form-control" id="link" name="link" value="<%= event?.link || '' %>" placeholder="nome-do-evento" required>
         <div class="invalid-feedback"></div>
     </div>
-    <div class="col-12">
-        <label for="image" class="form-label">Imagem do Evento</label>
-        <input type="file" class="form-control" id="image" name="image" value="<%= event?.image || '' %>" required>
-        <div class="invalid-feedback"></div>
-    </div>
+    <% if (event.image) { %>
+        <div class="col-6">
+            <label for="image" class="form-label">Imagem do Evento</label>
+            <input type="file" class="form-control" id="image" name="image" value="<%= event?.image || '' %>">
+        </div>
+        <div class="col-6">
+            <div class="text-center">
+                <img src="<%= event.image %>" alt="Imagem Atual" width="300">
+            </div>
+        </div>
+    <% } else { %>
+        <div class="col-12">
+            <label for="image" class="form-label">Imagem do Evento</label>
+            <input type="file" class="form-control" id="image" name="image" value="<%= event?.image || '' %>" required>
+            <div class="invalid-feedback"></div>
+        </div>
+    <% } %>
     <div class="col-12">
         <label for="description" class="form-label">Descrição do Evento</label>
         <input type="text" class="form-control" id="description" name="description" value="<%= event?.description || '' %>" placeholder="Participação especial de X" required>
@@ -44,12 +56,25 @@
 * Meia: R$10.00" required><%= event?.ticketPrice || '' %></textarea>
         <div class="invalid-feedback"></div>
     </div>
-    <div class="col-12">
-        <label for="sectorImage" class="form-label">Imagem do Setor</label>
-        <input type="file" class="form-control" id="sectorImage" name="sectorImage" value="<%= event?.sectorImage || '' %>" required>
-        <div class="invalid-feedback"></div>
-    </div>
+    <% if (event.sectorImage) { %>
+        <div class="col-6">
+            <label for="sectorImage" class="form-label">Imagem do Setor</label>
+            <input type="file" class="form-control" id="sectorImage" name="sectorImage" value="<%= event?.sectorImage || '' %>">
+        </div>
+        <div class="col-6">
+            <div class="text-center">
+                <img src="<%= event.sectorImage %>" alt="Imagem Atual" width="300">
+            </div>
+        </div>
+    <% } else { %>
+        <div class="col-12">
+            <label for="sectorImage" class="form-label">Imagem do Setor</label>
+            <input type="file" class="form-control" id="sectorImage" name="sectorImage" value="<%= event?.sectorImage || '' %>" required>
+            <div class="invalid-feedback"></div>
+        </div>
+    <% } %>
 
+    <% if (complete) { %>
     <!-- Datas do Evento -->
     <div class="col-12">
         <h3>Datas do Evento</h3>
@@ -134,6 +159,7 @@
         </div>
         <button type="button" class="btn btn-additional" id="addEventDate">Adicionar Data</button>
     </div>
+    <% } %>
 
     <!-- Botão de Submissão -->
     <button type="submit" class="btn btn-primary"><%= actionName %></button>
