--- a/views/admin/carousel.ejs
+++ b/views/admin/carousel.ejs
@@ -23,7 +23,7 @@
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
             <!-- Barra de pesquisa -->
-            <%- include('../components/search-bar', { actionUrl: '/admin/eventos' }) %>
+            <%- include('../components/search-bar', { actionUrl: '/admin/carrossel' }) %>
             
             <!-- Seção de eventos -->
             <section class="event-section search-section py-1">
@@ -31,7 +31,6 @@
                     <!-- Título da seção -->
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h2 class="section-title">Eventos</h2>
-                        <a href="/admin/eventos/criar" class="btn-create-event btn btn-shop ms-3">Criar Novo Evento</a>
                     </div>
                     <!-- Cards de eventos -->
                     <div class="row">
@@ -43,9 +42,15 @@
                                         <div class="card-body">
                                             <h5 class="card-title"><%= event.name %></h5>
                                             <p class="card-text"><%= event.description %></p>
-                                            <form action="/admin/carrossel/deletar/<%= event.link %>" method="POST">
-                                                <button type="submit" class="btn btn-shop" id="btn-card-shop">Remover</button>
-                                            </form>
+                                            <% if (event.isCarouselItem) { %>
+                                                <form action="/admin/carrossel/deletar/<%= event.link %>" method="POST">
+                                                    <button type="submit" class="btn btn-shop" id="btn-card-shop">Remover</button>
+                                                </form>
+                                            <% } else { %>
+                                                <form action="<%= event.link %>" method="POST">
+                                                    <button type="submit" class="btn btn-shop" id="btn-card-shop">Adicionar</button>
+                                                </form>
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
