--- a/views/admin/sections.ejs
+++ b/views/admin/sections.ejs
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="/stylesheets/index.css" rel="stylesheet"> 
+        <link href="/stylesheets/admin/events.css" rel="stylesheet"> 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
         <script src="/javascripts/components/header.js" defer></script>
@@ -21,6 +22,73 @@
 
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
+            <% if (eventsSections) { %>
+                <% eventsSections.forEach(section => { %>
+                    <section class="event-section py-1">
+                        <div class="container">
+                            <!-- Título da seção -->
+                            <div class="d-flex justify-content-between align-items-center mb-4">
+                                <h2 class="section-title"><%= section.section %></h2>
+                                <form action="/admin/secoes/<%= section.link %>/adicionar" method="POST">
+                                    <button type="submit" class="btn btn-shop" id="btn-card-shop">Adicionar Evento</button>
+                                </form>
+                            </div>
+                            <!-- Cards de eventos -->
+                            <div class="row">
+                                <% section.events.forEach(event => { %>
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card h-80">
+                                            <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><%= event.name %></h5>
+                                                <p class="card-text"><%= event.description %></p>
+                                                <form action="/admin/secoes/<%= section.link %>/<%= event.link %>/remover" method="POST">
+                                                    <button type="submit" class="btn btn-shop" id="btn-card-shop">Remover</button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <% }); %>
+                            </div>
+                        </div>
+                    </section>
+                <% }); %>
+            <% }; %>
+
+            <!-- Seções de resultado de pesquisa -->
+            <% if (eventsSearch) { %>
+                <section class="event-section search-section py-1">
+                    <div class="container">
+                        <!-- Título da seção -->
+                        <div class="text-center mb-4">
+                            <h2 class="section-title">Eventos</h2>
+                        </div>
+                        <% if (eventsSearch.length > 0) { %>
+                            <!-- Cards de eventos -->
+                            <div class="row">
+                                <% eventsSearch.forEach(event => { %>
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card h-80">
+                                            <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><%= event.name %></h5>
+                                                <p class="card-text"><%= event.description %></p>
+                                                <form action="/admin/secoes/<%= event.section %>/adicionar/<%= event.link %>" method="POST">
+                                                    <button type="submit" class="btn btn-shop" id="btn-card-shop">Adicionar</button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <% }); %>
+                            </div>
+                        <% } else { %>
+                            <div class="no-results-message">
+                                Nenhum evento encontrado.
+                            </div>
+                        <% } %>
+                    </div>
+                </section>
+            <% } %>
         </div>
 
         <!-- Rodapé  -->
