--- a/views/admin/sections.ejs
+++ b/views/admin/sections.ejs
@@ -27,7 +27,7 @@
                     <section class="event-section py-1">
                         <div class="container">
                             <!-- Título da seção -->
-                            <div class="d-flex justify-content-between align-items-center mb-4">
+                            <div class="d-flex justify-content-between align-items-center mb-4 mt-3">
                                 <h2 class="section-title"><%= section.section %></h2>
                                 <form action="/admin/secoes/<%= section.link %>/adicionar" method="POST">
                                     <button type="submit" class="btn btn-shop" id="btn-card-shop">Adicionar Evento</button>
