--- a/public/stylesheets/events/conclusion.css
+++ b/public/stylesheets/events/conclusion.css
@@ -2,7 +2,7 @@
 @import url(../style.css);
 
 .confirmation-banner {
-    background-color: #50cd6d; /* Cor verde */
+    background-color: #50cd6d;
     color: white;
     text-align: center;
     padding: 80px;
@@ -47,7 +47,8 @@ span {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.summary-section h3, .summary-section h4 {
+.summary-section h3,
+.summary-section h4 {
     margin-bottom: 10px;
 }
 
@@ -56,7 +57,8 @@ span {
     font-size: 1.2rem;
 }
 
-.summary-section .ticket-row, .summary-section .payment-row {
+.summary-section .ticket-row,
+.summary-section .payment-row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
