--- a/public/stylesheets/events/event.css
+++ b/public/stylesheets/events/event.css
@@ -51,7 +51,7 @@ section {
 
 .tickets .col-md-4 {
     flex: 0 0 39.5%;
-    max-width: 45%; 
+    max-width: 45%;
     box-sizing: border-box;
 }
 
@@ -86,10 +86,10 @@ section {
 }
 
 .btn {
-    background-color: #5f1571; 
+    background-color: #5f1571;
     border: none;
     color: white;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     font-size: 1.1rem;
     font-weight: 500;
     border-radius: 5px;
@@ -102,7 +102,8 @@ section {
     z-index: 2;
 }
 
-.btn:hover, .btn:active {
+.btn:hover,
+.btn:active {
     background-color: #6a1a7d !important;
 }
 
