--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -33,23 +33,24 @@
 }
 
 .carousel-control-prev-icon {
-    width: 30px; 
-    height: 30px; 
-    transform: scale(1.4); 
+    width: 30px;
+    height: 30px;
+    transform: scale(1.4);
     margin-right: 150px;
 }
 
 .carousel-control-next-icon {
     width: 30px;
-    height: 30px; 
-    transform: scale(1.4); 
+    height: 30px;
+    transform: scale(1.4);
     margin-left: 150px;
 }
 
-.carousel-control-prev, .carousel-control-next {
+.carousel-control-prev,
+.carousel-control-next {
     top: 50%;
-    transform: translateY(-50%); 
-    background: none; 
+    transform: translateY(-50%);
+    background: none;
     z-index: 3;
     pointer-events: auto;
 }
@@ -60,7 +61,7 @@
     left: 0;
     width: 100%;
     height: 60%;
-    background: linear-gradient(to top, rgba(130, 34, 154, 0.85) 35%, rgba(130, 34, 154, 0.4), rgba(130, 34, 154, 0)); 
+    background: linear-gradient(to top, rgba(130, 34, 154, 0.85) 35%, rgba(130, 34, 154, 0.4), rgba(130, 34, 154, 0));
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -86,21 +87,21 @@
 .carousel-indicators button {
     width: 8px !important;
     height: 8px !important;
-    border-radius: 50% !important; 
-    background-color: #888; 
-    border: none; 
+    border-radius: 50% !important;
+    background-color: #888;
+    border: none;
     z-index: 2;
 }
 
 .carousel-indicators .active {
-    background-color: #ffffff; 
+    background-color: #ffffff;
 }
 
 .btn-shop {
-    background-color: #5f1571; 
+    background-color: #5f1571;
     border: none;
     color: white;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     font-size: 1.1rem;
     font-weight: 500;
     border-radius: 5px;
@@ -113,7 +114,8 @@
     z-index: 2;
 }
 
-.btn-shop:hover, .btn-shop:active {
+.btn-shop:hover,
+.btn-shop:active {
     background-color: #6a1a7d !important;
 }
 
@@ -192,7 +194,8 @@
     margin-top: 10px;
 }
 
-#btn-card-shop:hover, #btn-card-shop:active {
+#btn-card-shop:hover,
+#btn-card-shop:active {
     background-color: #78258d !important;
     color: white;
 }
