--- a/public/stylesheets/orders.css
+++ b/public/stylesheets/orders.css
@@ -33,13 +33,13 @@
     border-color: #333;
     background-color: #fff;
 }
-  
+
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 20px;
 }
-  
+
 .card {
     display: flex;
     flex-direction: column;
@@ -52,24 +52,25 @@
     transition: transform 0.3s, box-shadow 0.3s;
     height: 300px;
 }
-  
+
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.388);
 }
-  
+
 .card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
-  
+
 .card h3 {
     margin: 15px 20px 5px;
     font-size: 1.2em;
 }
-  
-.card p, .card small {
+
+.card p,
+.card small {
     margin: 4px 20px;
     color: #252525;
     font-size: 1.0rem;
