--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -2,7 +2,7 @@
 @import url(./style.css);
 
 .content {
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: 30px;
@@ -13,8 +13,8 @@
 }
 
 .form-control {
-    height: 50px; 
-    font-size: 16px; 
+    height: 50px;
+    font-size: 16px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -48,7 +48,7 @@ input[type="date"]:valid {
 
 .btn-primary {
     background-color: #5f1571;
-    border-color: #3e0f60; 
+    border-color: #3e0f60;
     font-size: 22px;
     font-weight: bold;
     height: 50px;
@@ -59,7 +59,8 @@ input[type="date"]:valid {
     margin: 20px auto 5px auto;
 }
 
-.btn-primary:hover, .btn-primary:active {
+.btn-primary:hover,
+.btn-primary:active {
     background-color: #721e86 !important;
 }
 
@@ -113,7 +114,8 @@ input[type="date"]:valid {
     display: block;
 }
 
-#toggle-password-1, #toggle-password-2 {
+#toggle-password-1,
+#toggle-password-2 {
     position: absolute;
     right: 3px;
     top: 29px;
@@ -125,16 +127,17 @@ input[type="date"]:valid {
     color: #555;
 }
 
-#toggle-password-1 ion-icon, #toggle-password-2 ion-icon {
+#toggle-password-1 ion-icon,
+#toggle-password-2 ion-icon {
     font-size: 24px;
     color: #555;
 }
 
-.form-control.is-invalid ~ #toggle-password-1 {
+.form-control.is-invalid~#toggle-password-1 {
     right: 25px;
 }
 
-.form-control.is-invalid ~ #toggle-password-2 {
+.form-control.is-invalid~#toggle-password-2 {
     right: 25px;
 }
 
