--- a/public/stylesheets/support.css
+++ b/public/stylesheets/support.css
@@ -2,7 +2,7 @@
 @import url(./style.css);
 
 .search-section {
-    display: flex; 
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -31,15 +31,15 @@
 }
 
 .search-section .form-select {
-    height: 50px; 
-    font-size: 16px; 
+    height: 50px;
+    font-size: 16px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .form-select {
-    background-color: white; 
+    background-color: white;
 }
 
 .form-select option:disabled {
@@ -52,8 +52,8 @@
 }
 
 .search-section .form-control {
-    height: 100px; 
-    font-size: 16px; 
+    height: 100px;
+    font-size: 16px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -65,7 +65,7 @@
 
 .search-section .btn-primary {
     background-color: #5f1571;
-    border-color: #3e0f60; 
+    border-color: #3e0f60;
     font-size: 22px;
     font-weight: bold;
     height: 50px;
@@ -76,7 +76,8 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.537);
 }
 
-.search-section .btn-primary:hover, .search-section .btn-primary:active {
+.search-section .btn-primary:hover,
+.search-section .btn-primary:active {
     background-color: #721e86 !important;
 }
 
@@ -98,7 +99,8 @@
     font-weight: bold;
 }
 
-.tab-button:hover, .tab-button.active {
+.tab-button:hover,
+.tab-button.active {
     background-color: #555;
 }
 
@@ -127,7 +129,7 @@
     margin-bottom: 10px;
     border: 1px solid #ddd;
     border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
